--- a/packages/adapters/aws/package.json
+++ b/packages/adapters/aws/package.json
@@ -1,15 +1,51 @@
 {
   "name": "@nexus/adapters-aws",
   "version": "1.0.0",
+  "description": "AWS adapters for Nexus Blueprint (DynamoDB, Glue Schema Registry)",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "keywords": [
+    "nexus",
+    "event-sourcing",
+    "aws",
+    "dynamodb",
+    "glue",
+    "schema-registry"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nexus-blueprint/nexus.git",
+    "directory": "packages/adapters/aws"
+  },
+  "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@nexus/shared": "^1.0.0",
     "@aws-sdk/client-dynamodb": "^3.0.0",
     "@aws-sdk/lib-dynamodb": "^3.0.0",
     "@aws-sdk/client-glue": "^3.0.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/node": "^20.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.0"
+  },
+  "peerDependencies": {
+    "@nexus/shared": "^1.0.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "roots": ["<rootDir>"],
+    "testMatch": ["**/__tests__/**/*.test.ts"],
+    "moduleNameMapper": {
+      "^@nexus/shared$": "<rootDir>/../../shared/src"
+    }
   }
 }
