--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,16 +1,57 @@
 {
   "name": "@nexus/shared",
   "version": "1.0.0",
+  "description": "Shared types, ports, and utilities for Nexus Blueprint event-sourcing framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "keywords": [
+    "event-sourcing",
+    "cqrs",
+    "ddd",
+    "typescript",
+    "serverless",
+    "aws",
+    "multi-cloud"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nexus-blueprint/nexus.git",
+    "directory": "packages/shared"
+  },
+  "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.0"
+    "@types/jest": "^29.5.0",
+    "@types/node": "^20.0.0",
+    "@types/uuid": "^9.0.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.0"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "roots": ["<rootDir>/src"],
+    "testMatch": ["**/__tests__/**/*.test.ts"],
+    "collectCoverageFrom": [
+      "src/**/*.ts",
+      "!src/**/__tests__/**",
+      "!src/**/index.ts"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 60,
+        "functions": 60,
+        "lines": 60,
+        "statements": 60
+      }
+    }
   }
 }
